@@ -12,8 +12,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="lost_found"/>
     <label name="company"/>
     <field name="company"/>
-    <newline/>
-    <button name="complete_lines" colspan="2"/>
     <label name="empty_quantity"/>
     <field name="empty_quantity"/>
     <field name="lines" colspan="4"/>
@@ -21,7 +19,9 @@ this repository contains the full copyright notices and license terms. -->
         <label name="state"/>
         <field name="state"/>
         <group colspan="2" col="-1" id="buttons">
-            <button name="cancel" icon="tryton-cancel" />
+            <button name="cancel" icon="tryton-cancel"/>
+            <button name="complete_lines"/>
+            <button name="count"/>
             <button name="confirm" icon="tryton-ok"/>
         </group>
     </group>
